--- a/TzalemTmuna/Properties/Resources.resx
+++ b/TzalemTmuna/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="emptyprofilepicture" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\emptyprofilepicture.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImageRemoved" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImageRemoved.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="tico" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tico.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
